refactor: move frontend to app directory

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "typescript": "^5.0.0"
   },
   "workspaces": [
-    "infrastructure/*",
-    "frontend/*",
+    "apps/*",
     "packages/*"
   ]
 }
