--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "start": {
+      "dependsOn": ["build"],
       "cache": false,
       "persistent": true
     },
