--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "turbo start",
     "dev": "turbo dev",
     "format": "biome check .",
-    "format:apply": "biome check --apply-unsafe ."
+    "format:apply": "biome check --apply-unsafe .",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
