--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "turbo dev",
     "format": "biome check .",
     "format:apply": "biome check --apply-unsafe .",
-    "type-check": "tsc --noEmit",
+    "type-check": "turbo type-check",
     "prepare": "husky"
   },
   "devDependencies": {
