--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,10 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "type-check": {
+      "dependsOn": ["^type-check"],
+      "cache": false
     }
   }
 }
