--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "destyle.css": "^4.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
